--- a/1_DataStructures/Arrays/1_1ProductOfAllOtherElements.ipynb
+++ b/1_DataStructures/Arrays/1_1ProductOfAllOtherElements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c2e2295",
+   "id": "6904f3f3",
    "metadata": {},
    "source": [
     "# Problem Statement\n",
@@ -14,11 +14,11 @@
     "An array such that at each index, the number is the  product of all the elements of the given array, other than the one in the index.\n",
     "\n",
     "#### Example:\n",
-    "arr=[1, 2, 3, 4, 5]\n",
+    "arr = [1, 2, 3, 4, 5]\n",
     "\n",
     "expected output: [120, 60, 40, 30, 24] \n",
     "\n",
-    "[2X3X4X5 , 1X3X4X5, 1X2X4X5, 1X2X3X5, 1X2X3X4]\n",
+    "[2 X 3 X 4 X 5, 1 X 3 X 4 X 5, 1 X 2 X 4 X 5, 1 X 2 X 3 X 5, 1 X 2 X 3 X 4]\n",
     "\n",
     "\n"
    ]
@@ -26,20 +26,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ada77b3c",
+   "id": "2b2b7c56",
    "metadata": {},
    "outputs": [],
    "source": [
     "def productAllOtherElements(arr):  # O(n) \n",
     "    product = 1\n",
-    "    n=0\n",
+    "    n = 0\n",
     "    for el in arr:\n",
-    "        n+=1\n",
+    "        n += 1\n",
     "        product *= el\n",
     "    \n",
-    "    ret_arr=[product]*n\n",
+    "    ret_arr = [product] * n\n",
     "    for i in range(n):\n",
-    "        ret_arr[i]=ret_arr[i]//arr[i]\n",
+    "        ret_arr[i] = ret_arr[i] // arr[i]\n",
     "        \n",
     "    return ret_arr"
    ]
@@ -47,17 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c61cfe2",
+   "id": "ff2e50ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr=[1, 2, 3, 4, 5]"
+    "arr = [1, 2, 3, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57618ee0",
+   "id": "988ea307",
    "metadata": {
     "scrolled": true
    },
@@ -71,12 +71,12 @@
     }
    ],
    "source": [
-    "print(productAllOtherElements(arr))"
+    "print(productAllOtherElements(arr)) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd6891aa",
+   "id": "a4d1ab9e",
    "metadata": {},
    "source": [
     "# Follow up: division is not allowed"
@@ -85,36 +85,36 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67b6dd0b",
+   "id": "b1846b1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def productAllOtherElementsNoDiv(arr):   # O(n^2)\n",
-    "    n=len(arr)\n",
-    "    ret_arr=[0]*n\n",
+    "    n = len(arr)\n",
+    "    ret_arr = [0] * n\n",
     "    for i in range(n):\n",
     "        pr = 1\n",
     "        for j in range(n):\n",
     "            if i != j:\n",
     "                pr *= arr[j]\n",
-    "        ret_arr[i]=pr\n",
+    "        ret_arr[i] = pr\n",
     "    return ret_arr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4c89ef15",
+   "id": "f66f3fbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr=[1, 2, 3, 4, 5]"
+    "arr = [1, 2, 3, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea72209b",
+   "id": "7e843d70",
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +127,40 @@
    ],
    "source": [
     "print(productAllOtherElementsNoDiv(arr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5752b1b5",
+   "metadata": {},
+   "source": [
+    "O(n) solution if division is not allowed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d75cb13b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def productAllOtherElementsNoDiv(arr):\n",
+    "    pref_products = []\n",
+    "    for el in arr:\n",
+    "        if pre_products:\n",
+    "            pre_products.append(pre_products[-1] * el)\n",
+    "        else:\n",
+    "            pre_products.append(el)\n",
+    "    \n",
+    "    suff_products = []\n",
+    "    for el in reversed(arr):\n",
+    "        if suff_products:\n",
+    "            suff_products.append(suff_products[-1] * el)\n",
+    "        else:\n",
+    "            suff_products.append(el)\n",
+    "    \n",
+    "    for i in range(len(arr)):\n",
+    "        "
    ]
   }
  ],
